# openapi31to30

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
samples/: downconvert.yaml
src/: lib.rs  main.rs  utoipa_tests.rs  visitor.rs
src/snapshots/: openapi31to30__test__example_from_downconvert.snap  openapi31to30__test__example_from_downconvert.snap.new  openapi31to30__utoipa_tests__basic-before.snap  openapi31to30__utoipa_tests__basic-converted.snap  openapi31to30__utoipa_tests__multipart-before.snap  openapi31to30__utoipa_tests__multipart-converted.snap  openapi31to30__utoipa_tests__nullable-before.snap  openapi31to30__utoipa_tests__nullable-converted.snap  openapi31to30__utoipa_tests__paths-before.snap  openapi31to30__utoipa_tests__paths-converted.snap  openapi31to30__utoipa_tests__verbs-before.snap  openapi31to30__utoipa_tests__verbs-converted.snap
src/utoipa_tests/: multipart.rs  nullable.rs  path.rs  verbs.rs
