[package]
name = "openapi31to30"
version = "0.0.1"
edition = "2021"
license = "ISC"
description = "Convert OpenAPI schemas from 3.1 to 3.0"
repository = "https://github.com/sciguy16/openapi31to30"

[dependencies]
color-eyre = "0.6.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
insta = "1.43.1"
pretty_assertions = "1.4.1"
progenitor = "0.9.1"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
